log

Thu 14 Mar 2024 08:47:13 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
20de495
Thu 14 Mar 2024 08:48:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c68c5eb
Thu 14 Mar 2024 08:53:06 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
629111e
Thu 14 Mar 2024 09:01:44 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
3ab8047
Thu 14 Mar 2024 09:02:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d692aac
Thu 14 Mar 2024 09:03:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
de82537
Fri 15 Mar 2024 01:07:45 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:8: error: ‘result’ redeclared as different kind of symbol
   66 |   int* result = (int *) malloc((size1 + size2) * sizeof(int));
      |        ^~~~~~
exercises.c:65:28: note: previous definition of ‘result’ with type ‘int *’
   65 |                        int result[]){
      |                        ~~~~^~~~~~~~
Compilation failed
61c004d
Fri 15 Mar 2024 01:08:21 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|4
total_score: 30/70
ed57a48
Fri 15 Mar 2024 01:10:32 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:7: error: ‘posicion’ may be used uninitialized [-Werror=maybe-uninitialized]
   66 |   int posicion;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
af79293
Fri 15 Mar 2024 01:11:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:66:7: error: ‘posicion’ may be used uninitialized [-Werror=maybe-uninitialized]
   66 |   int posicion;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecbd740
Fri 15 Mar 2024 01:11:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
d05ea00
Fri 15 Mar 2024 01:12:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
9118dbe
Fri 15 Mar 2024 01:13:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4ad6ac9
Fri 15 Mar 2024 01:13:51 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
6f1b9f5
Fri 15 Mar 2024 01:14:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4034587
Fri 15 Mar 2024 01:15:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
a05a51d
Fri 15 Mar 2024 01:16:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
7e28e6d
Fri 15 Mar 2024 01:21:37 PM UTC: 
 exercises.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
 tests:  0|3
total_score: 40/70
0cc02b1
Fri 15 Mar 2024 01:37:37 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:115:23: error: expected identifier before ‘char’
  115 |   strcpy(libro->autor.char, nombreAutor);
      |                       ^~~~
exercises.c:115:3: error: too few arguments to function ‘strcpy’
  115 |   strcpy(libro->autor.char, nombreAutor);
      |   ^~~~~~
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/features.h:490,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/ctype.h:25,
                 from exercises.c:1,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
Compilation failed
f3b4689
Fri 15 Mar 2024 01:37:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
144fa57
Sat 16 Mar 2024 08:50:47 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:95:1: error: control reaches end of non-void function [-Werror=return-type]
   95 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4d7996
Sat 16 Mar 2024 08:53:05 PM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7ed0df7
Sat 16 Mar 2024 08:53:25 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|2
total_score: 50/70
9f131f9
Sat 16 Mar 2024 09:09:19 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:88:7: error: variable ‘descendente’ set but not used [-Werror=unused-but-set-variable]
   88 |   int descendente = 1;
      |       ^~~~~~~~~~~
exercises.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
  102 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dc9d5b2
Sat 16 Mar 2024 09:10:36 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
8bc53bb
Sat 16 Mar 2024 09:13:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
92f4ea9
Sat 16 Mar 2024 09:13:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
9a587c0
Sat 16 Mar 2024 09:17:06 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
0d1f366
Sat 16 Mar 2024 09:17:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
0a7e309
Sat 16 Mar 2024 09:23:20 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
ade7a4c
Sat 16 Mar 2024 09:24:37 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|1
total_score: 60/70
c9a0d2a
